support math library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,16 +56,16 @@ find_package(SDL2_image REQUIRED)
 target_link_libraries(${PROJECT_NAME} SDL2::Image)
 
 # Add SDL2_ttf library
-#find_package(SDL2_ttf REQUIRED)
-#target_link_libraries(${PROJECT_NAME} SDL2::TTF)
+find_package(SDL2_ttf REQUIRED)
+target_link_libraries(${PROJECT_NAME} SDL2::TTF)
 
 # Add SDL2_net library
-#find_package(SDL2_net REQUIRED)
-#target_link_libraries(${PROJECT_NAME} SDL2::Net)
+find_package(SDL2_net REQUIRED)
+target_link_libraries(${PROJECT_NAME} SDL2::Net)
 
 # Add SDL2_mixer library
-#find_package(SDL2_mixer REQUIRED)
-#target_link_libraries(${PROJECT_NAME} SDL2::Mixer)
+find_package(SDL2_mixer REQUIRED)
+target_link_libraries(${PROJECT_NAME} SDL2::Mixer)
 
 # Add SDL2_gfx library
 find_package(SDL2_gfx REQUIRED)
